<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.OnBoarding">

    <View
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:background="@drawable/rounded_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/shape_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="200dp"
        android:layout_height="280dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/standing_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="100dp"
        android:text="@string/first_screen_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_screen_title"
        style="@style/text_style"
        android:layout_marginBottom="280dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/first_screen_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/first_screen_description"
        style="@style/text_style"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/first_screen_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_screen_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="120dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="140dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/skip"
        android:textColor="@color/purple_main"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
